# descend-pjs-22-23

cuda-examples/: compile-vector-add.sh  palma-how-to.txt  scan_generated.cu  tree_reduce.cu  vector-add.cu
opencl-examples/: descend.hpp  genereated_shared_mem_reduce.cpp  shrd_mem_reduce.cpp  tree_reduce.cpp
performance-tests/: README.md  compile-reduce_shared_mem-cl.sh  compile-tree_reduce-cl.sh  compile-vector-add-cu.sh  compile-vector-add.sh  (+17 more)
performance-tests-detailed/: compile-reduce_shared_mem-cl.sh  compile-vector_add-cl.sh  framework-cl.py  framework-cl.sh  framework-cu.py  framework-cu.sh  plot_suite.py  run-before-cuda-compile.sh  run_reduce_shared_mem_cl.sh  run_reduce_shared_mem_cu.sh  run_tree_reduce_cl.sh  run_vector_add_cl.sh  run_vector_add_cu.sh
performance-tests-detailed/plot_suite/results/reduce_shared_mem_cl/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  reduce_shared_mem.cpp  reduce_shared_mem_cl_rtx4000_128_1024.cpp  reduce_shared_mem_cl_rtx4000_128_128.cpp  reduce_shared_mem_cl_rtx4000_128_256.cpp  reduce_shared_mem_cl_rtx4000_128_512.cpp  reduce_shared_mem_cl_rtx4000_16_1024.cpp  reduce_shared_mem_cl_rtx4000_16_128.cpp  reduce_shared_mem_cl_rtx4000_16_256.cpp  reduce_shared_mem_cl_rtx4000_16_512.cpp  reduce_shared_mem_cl_rtx4000_32_1024.cpp  reduce_shared_mem_cl_rtx4000_32_128.cpp  reduce_shared_mem_cl_rtx4000_32_256.cpp  reduce_shared_mem_cl_rtx4000_32_512.cpp  reduce_shared_mem_cl_rtx4000_64_1024.cpp  reduce_shared_mem_cl_rtx4000_64_128.cpp  reduce_shared_mem_cl_rtx4000_64_256.cpp  reduce_shared_mem_cl_rtx4000_64_512.cpp
(+92 files in other folders)
